--- a/zc_install/includes/systemChecks.yml
+++ b/zc_install/includes/systemChecks.yml
@@ -299,6 +299,94 @@ systemChecks:
     methods:
       checkHttpsRequest:
 
+  checkDBVersion210200:
+    runLevel: dbVersion
+    errorLevel: WARN
+    version: '2.1.0200'
+    mainErrorText: <?php echo sprintf(TEXT_DB_VERSION_NOT_FOUND, 'v2.1.0200') . PHP_EOL; ?>
+    methods:
+      dbVersionChecker:
+        parameters:
+          - checkType: fieldSchema
+            tableName: products
+            fieldName: products_mpn
+            fieldCheck: Exists
+          - checkType: fieldSchema
+            tableName: address_book
+            fieldName: entry_firstname_kana
+            fieldCheck: Exists
+          - checkType: fieldSchema
+            tableName: address_book
+            fieldName: entry_lastname_kana
+            fieldCheck: Exists
+          - checkType: fieldSchema
+            tableName: address_book
+            fieldName: entry_telephone
+            fieldCheck: Exists
+          - checkType: fieldSchema
+            tableName: address_book
+            fieldName: entry_fax
+            fieldCheck: Exists
+          - checkType: fieldSchema
+            tableName: customers
+            fieldName: customers_firstname_kana
+            fieldCheck: Exists
+          - checkType: fieldSchema
+            tableName: customers
+            fieldName: customers_lastname_kana
+            fieldCheck: Exists
+          - checkType: fieldSchema
+            tableName: orders
+            fieldName: customers_name_kana
+            fieldCheck: Exists
+          - checkType: fieldSchema
+            tableName: orders
+            fieldName: delivery_name_kana
+            fieldCheck: Exists
+          - checkType: fieldSchema
+            tableName: orders
+            fieldName: billing_name_kana
+            fieldCheck: Exists
+          - checkType: fieldSchema
+            tableName: orders
+            fieldName: delivery_telephone
+            fieldCheck: Exists
+          - checkType: fieldSchema
+            tableName: orders
+            fieldName: delivery_fax
+            fieldCheck: Exists
+          - checkType: fieldSchema
+            tableName: orders
+            fieldName: billing_telephone
+            fieldCheck: Exists
+          - checkType: fieldSchema
+            tableName: orders
+            fieldName: billing_fax
+            fieldCheck: Exists
+          - checkType: fieldSchema
+            tableName: orders
+            fieldName: customers_fax
+            fieldCheck: Exists
+          - checkType: fieldSchema
+            tableName: orders
+            fieldName: delivery_timespec
+            fieldCheck: Exists
+
+  checkDBVersion210:
+    runLevel: dbVersion
+    errorLevel: WARN
+    version: '2.1.0'
+    mainErrorText: <?php echo sprintf(TEXT_DB_VERSION_NOT_FOUND, 'v2.1.0') . PHP_EOL; ?>
+    methods:
+      dbVersionChecker:
+        parameters:
+          - checkType: configKeyExists
+            keyName: MFA_ENABLED
+          - checkType: fieldSchema
+            tableName: admin_expired_tokens
+            fieldName: otp_code
+            fieldCheck: Exists
+
   checkDBVersion200200:
     runLevel: dbVersion
     errorLevel: WARN
